# opencv_contrib

modules/text/: CMakeLists.txt
modules/text/src/: erfilter.cpp  ocr_beamsearch_decoder.cpp  ocr_hmm_decoder.cpp
